# computer-graphics

./: Patel, Ronak_Midterm CS4722.docx  README.md
Assignment 1/Downloadable/assign01/: CMakeLists.txt  fragment_shader.glsl  three-triangles.cpp
Assignment 1/Downloadable/assign01/lib64/include/cs4722/: artifact.h  utility_glm.h
Assignment 2 V2/: CMakeLists.txt
Assignment 2 V2/02-animation/: fragment_shader.glsl
Assignment 2 V2/03-world-coloring/: main.cpp
Assignment 2 V2/04-object-coloring/: fragment_shader.glsl  main.cpp  vertex_shader.glsl
Assignment 2 V2/lib64/include/cs4722/: shape.h  view.h
Assignment 2/assignment02/01-more-shapes/: main.cpp
Assignment 2/assignment02/02-animation/: main.cpp  vertex_shader.glsl
Assignment 2/assignment02/03-world-coloring/: main.cpp
Assignment 3/assignment03/: 0-base.cpp  1-mix-colors.cpp  2-stick-to-ground.cpp  3-eyes-level.cpp  4-panning.cpp  5-monolith.cpp  CMakeLists.txt  fragment_shader.glsl
Assignment 3/assignment03/lib64/include/glad/: gl.h
Assignment 4 v2/assignment04/: CMakeLists.txt  fragment_shader01.glsl  temple.cpp  vertex_shader01.glsl
Assignment 4 v2/assignment04/lib64/include/glad/: gl.h
Assignment 4/assignment04/: fragment_shader01.glsl  temple.cpp
Assignment 4/assignment04/lib64/: README.txt
Assignment 4/assignment04/lib64/include/cs4722/: shape.h
Assignment 5 v2/assignment04/: fragment_shader01.glsl  temple.cpp  vertex_shader01.glsl
Assignment 5 v2/assignment04/lib64/include/cs4722/: artifact_elliptical_orbit.h  x11.h
Assignment 5 v2/assignment04/mediaA5/blue_cloud/: readme.txt
Assignment 5/01-sky-box/: fragment_shader01.glsl  skybox.cpp  vertex_shader01.glsl
Assignment 5/02-reflecting-object/: reflecting-object.cpp
Assignment 5/assignment04/: fragment_shader01.glsl  temple.cpp  vertex_shader01.glsl
Assignment 5/assignment04/lib64/include/cs4722/: light.h
Assignment 5/assignment04/lib64/include/learnopengl/: shader.h
Assignment 6 Redone/assignment04/: callbacks.h
Assignment 6 Redone/assignment04/lib64/include/cs4722/: artifact.h
Assignment 6 Redone/assignment04/media/: notes.txt
Assignment 6 Submittable/: CMakeLists.txt
Assignment 6 Submittable/01-sky-box/: skybox.cpp  vertex_shader01.glsl
Assignment 6 Submittable/lib64/include/cs4722/: texture_utilities.h  utility.h
Assignment 6 Submittable/media/: notes.txt  orientation-test.odg
Assignment 6/m05-advanced-textures/: CMakeLists.txt  callbacks.h
Assignment 6/m05-advanced-textures/lib64/include/GLM/detail/: type_half.inl
Assignment 6/m05-advanced-textures/lib64/include/cs4722/: transform.h
Assignment 7/assignment07/: CMakeLists.txt  temple.cpp  vertex_shader01.glsl
Assignment Skybox extras/02-reflecting-object/: reflecting-object.cpp
Assignment Skybox extras/03A-image-processing-static-image/: file-image.cpp
Assignment Skybox extras/03B-image-processing-rendered-image/: file-image.cpp  reflecting-object.cpp  reflecting_object.h
Assignment Skybox extras/03C-pixel-filters/: pixel_filters.cpp
Assignment Skybox extras/04-dynamic-reflection/: dynamic-reflection.cpp  scene1.cpp  scene1.h  scene2.cpp  scene2.h
Assignment Skybox extras/05-point-sprites/: fragment_shader05.glsl  point-shape.h  point_sprites.cpp
Assignment Skybox extras/06-point-sprites-2/: point_sprites-2.cpp
Final/: Final.docx
